<!--
  ~ Moments - To the best Instagram client
  ~ Copyright (C) 2015  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program;  if not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/navigation_home" />

        <item
            android:id="@+id/explore"
            android:icon="@drawable/ic_explore_white_24dp"
            android:title="@string/navigation_explore" />

        <item
            android:id="@+id/inbox"
            android:icon="@drawable/ic_inbox_white_24dp"
            android:title="@string/navigation_inbox" />

    </group>

    <group android:id="@+id/footer">

        <item
            android:id="@+id/proxy"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/proxy" />

    </group>

</menu>
