<!--
  ~ Moments - To the best Instagram client
  ~ Copyright (C) 2015  XiNGRZ <xxx@oxo.ooo>
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program;  if not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user.UserActivity">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="user"
            type="ooo.oxo.moments.model.User" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:statusBarScrim="?colorPrimary"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?actionBarSize"
                    android:orientation="vertical"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:layout_collapseMode="parallax">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="100dp">

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="16dp"
                            tools:ignore="ContentDescription"
                            tools:src="#ccc" />

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/avatar"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"
                            android:singleLine="true"
                            android:text="@{user.username}"
                            android:textAllCaps="true"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="24sp"
                            tools:text="xingrz" />

                        <TextView
                            android:id="@+id/full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/user_name"
                            android:layout_toEndOf="@+id/avatar"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@{user.fullName}"
                            android:textColor="?android:textColorSecondary"
                            android:textSize="12sp"
                            android:visibility="@{TextUtils.isEmpty(user.fullName) ? View.GONE : View.VISIBLE}"
                            tools:text="Sing Yu Chan this name should be very long that single line" />

                        <TextView
                            android:id="@+id/biography"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/full_name"
                            android:layout_marginTop="8dp"
                            android:layout_toEndOf="@+id/avatar"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@{user.biography}"
                            android:textColor="?android:textColorPrimary"
                            android:visibility="@{TextUtils.isEmpty(user.biography) ? View.GONE : View.VISIBLE}"
                            tools:text="Here is my introduction that is very very long but at most two lines twinkle twinkle little stars" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/counts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:gravity="center_horizontal|bottom"
                        android:minHeight="60dp"
                        android:orientation="horizontal"
                        android:visibility="@{user.mediaCount == -1 ? View.INVISIBLE : View.VISIBLE}"
                        tools:visibility="visible">

                        <LinearLayout
                            android:id="@+id/posts_container"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-thin"
                                android:text="@{String.valueOf(user.mediaCount)}"
                                android:textColor="?android:textColorSecondary"
                                android:textSize="30sp"
                                tools:text="1142" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_posts"
                                android:textAllCaps="true"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/followers_container"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-thin"
                                android:text="@{String.valueOf(user.followerCount)}"
                                android:textColor="?android:textColorSecondary"
                                android:textSize="30sp"
                                tools:text="142" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_followers"
                                android:textAllCaps="true"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/following_container"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-thin"
                                android:text="@{String.valueOf(user.followingCount)}"
                                android:textColor="?android:textColorSecondary"
                                android:textSize="30sp"
                                tools:text="34" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_following"
                                android:textAllCaps="true"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.CollapsingToolbarLayout>

            <ooo.oxo.moments.widget.IconifiedTabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_collapseMode="pin"
                app:tabIndicatorColor="@android:color/white" />

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>
